# korrent-svn

./: AUTHORS  ChangeLog  INSTALL  README  VERSION  acinclude.m4  configure.in.in  korrent.lsm  korrent.spec
admin/: Makefile  Makefile.in  cvs.sh
doc/: Makefile.am
doc/korrent/: Makefile.am  index.docbook
korrent/: Makefile.am  korrent.cpp  korrent.desktop  korrent.h  korrent_client.cpp  korrentiface.h  korrentpref.cpp  korrentpref.h  korrentui.rc  korrentview.cpp  korrentview.h  main.cpp
korrent/pics/: Makefile.am
